--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ POSTGRES_PORT=5432
 POSTGRES_USER=localuser
 POSTGRES_PASSWORD=localpassword
 POSTGRES_DB=localdb
+DATABASE_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@$POSTGRES_HOST:$POSTGRES_PORT/$POSTGRES_DB
