--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "scripts": {
     "dev": "npm run services:up && next dev",
+    "migrations:create": "node-pg-migrate -m infra/migrations create",
+    "migrations:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "services:down": "docker compose -f infra/compose.yaml down"
   },
   "dependencies": {
+    "dotenv": "16.4.7",
+    "dotenv-expand": "12.0.1",
     "next": "15.1.4",
+    "node-pg-migrate": "7.9.0",
     "pg": "8.13.1",
     "react": "19.0.0",
     "react-dom": "19.0.0"
