--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "dev": "npm run services:up && next dev",
     "migrations:create": "node-pg-migrate -m infra/migrations create",
     "migrations:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
+    "test": "jest --runInBand --verbose",
+    "test:watch": "jest --runInBand --verbose --watch",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "services:down": "docker compose -f infra/compose.yaml down"
@@ -17,10 +19,17 @@
     "react-dom": "19.0.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.1.0",
+    "@types/jest": "29.5.14",
     "@types/node": "22.10.6",
     "@types/pg": "8.11.10",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "ts-node": "10.9.2",
     "typescript": "5.7.3"
   }
 }
