--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.1.0",
+    "@types/async-retry": "1.4.9",
     "@types/jest": "29.5.14",
     "@types/node": "22.10.6",
     "@types/pg": "8.11.10",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
+    "async-retry": "1.3.3",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "ts-node": "10.9.2",
