--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "scripts": {
     "dev": "npm run services:up && next dev",
+    "test": "jest --runInBand --verbose",
+    "lint:prettier:check": "prettier --check .",
+    "lint:prettier:fix": "prettier --write .",
+    "test:watch": "jest --runInBand --verbose --watch",
     "migrations:create": "node-pg-migrate -m infra/migrations create",
     "migrations:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
-    "test": "jest --runInBand --verbose",
-    "test:watch": "jest --runInBand --verbose --watch",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "services:down": "docker compose -f infra/compose.yaml down"
@@ -31,6 +33,7 @@
     "async-retry": "1.3.3",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
+    "prettier": "3.4.2",
     "ts-node": "10.9.2",
     "typescript": "5.7.3"
   }
