--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
     "async-retry": "1.3.3",
+    "eslint": "9.18.0",
+    "eslint-config-next": "15.1.4",
+    "eslint-config-prettier": "10.0.1",
+    "eslint-plugin-jest": "28.11.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "prettier": "3.4.2",
