--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
     "async-retry": "1.3.3",
+    "concurrently": "9.1.2",
     "eslint": "9.18.0",
     "eslint-config-next": "15.1.4",
     "eslint-config-prettier": "10.0.1",
