--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "dev": "npm run services:up && next dev",
-    "test": "jest --runInBand --verbose",
+    "dev": "npm run services:up && npm run services:wait:database && npm run migrations:up && next dev",
+    "test": "npm run services:up && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
     "lint:eslint:check": "next lint --dir .",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
@@ -10,7 +10,8 @@
     "migrations:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:stop": "docker compose -f infra/compose.yaml stop",
-    "services:down": "docker compose -f infra/compose.yaml down"
+    "services:down": "docker compose -f infra/compose.yaml down",
+    "services:wait:database": "node infra/wait-for-postgres.mjs"
   },
   "dependencies": {
     "dotenv": "16.4.7",
