--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "19.0.0"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "19.6.0",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.1.0",
@@ -33,11 +34,13 @@
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
     "async-retry": "1.3.3",
+    "commitizen": "4.3.1",
     "concurrently": "9.1.2",
     "eslint": "9.18.0",
     "eslint-config-next": "15.1.4",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-jest": "28.11.0",
+    "husky": "9.1.7",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "prettier": "3.4.2",
