--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "services:down": "docker compose -f infra/compose.yaml down",
-    "services:wait:database": "node infra/wait-for-postgres.mjs"
+    "services:wait:database": "node infra/wait-for-postgres.mjs",
+    "prepare": "husky install"
   },
   "dependencies": {
     "dotenv": "16.4.7",
@@ -40,7 +41,7 @@
     "eslint-config-next": "15.1.4",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-jest": "28.11.0",
-    "husky": "9.1.7",
+    "husky": "8.0.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "prettier": "3.4.2",
