--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "dev": "npm run services:up && npm run services:wait:database && npm run migrations:up && next dev",
     "test": "npm run services:up && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
+    "commit": "cz",
     "lint:eslint:check": "next lint --dir .",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
@@ -37,6 +38,7 @@
     "async-retry": "1.3.3",
     "commitizen": "4.3.1",
     "concurrently": "9.1.2",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "9.18.0",
     "eslint-config-next": "15.1.4",
     "eslint-config-prettier": "10.0.1",
@@ -47,5 +49,10 @@
     "prettier": "3.4.2",
     "ts-node": "10.9.2",
     "typescript": "5.7.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
